--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -45,11 +45,11 @@ list-style-type: none;
 }
 .queue {
 	overflow-y: scroll;
-	height: calc(100vh - 125px);
+	height: calc(100vh - 200px);
 }
 .results {
 	overflow-y: scroll;
-	height: calc(100vh - 125px);
+	height: calc(100vh - 200px);
 }
 .title {
 	color: #EB4533;
@@ -65,7 +65,7 @@ list-style-type: none;
 .row {
 	width: 100%;
 	background-color: #37393E;
-	height: 87px;
+	height: 10%;
 	margin-top: 5px;
 	padding-left: 7px;
 	padding-top: 7px;
@@ -73,7 +73,7 @@ list-style-type: none;
 	margin-left: 0;
 }
 .artwork {
-	height: 80px;
+	height: 98%;
 	width: auto;
 	float: left;
 	display: inline;
@@ -81,10 +81,9 @@ list-style-type: none;
 	user-select: none;
 }
 .song_name {
-	display: inline;
 	color: #F2F2F2;
 	font-size: 21px;
-	width: 80%;
+	width: auto;
 	overflow: hidden;
 	padding-right: 7px;
   text-overflow: ellipsis;
