--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -21,7 +21,7 @@ html,body {
 }
 @font-face {
     font-family: Avenir;
-    src: url("/static/fonts/AvenirBook.otf")
+    src: url("static/fonts/AvenirBook.otf")
 }
 ul
 {
@@ -30,26 +30,27 @@ list-style-type: none;
 .query {
 	height: 30px;
 	width: 90%;
-	border-radius: 6px;
+	border-radius: 5px;
 	border: 1px #999 solid;
 	font-size: 16px;
 	padding-left: 10px;
 	font-family: Avenir, Gotham, Helvetica, Arial, sans-serif;
 	text-overflow: ellipsis;
-  	white-space: nowrap;
-	padding-right: 7px;
+  white-space: nowrap;
 }
 .query:focus {
-	border: 1px #EB4533 solid;
+	border: 1px #3079FB solid;
 	font-family: Avenir, Gotham, Helvetica, Arial, sans-serif
 }
 .queue {
 	overflow-y: scroll;
-	height: calc(100vh - 200px);
+	max-height: 100%;
+	height: auto;
+	
 }
 .results {
 	overflow-y: scroll;
-	height: calc(100vh - 200px);
+	height: calc(100vh - 25%);
 }
 .title {
 	color: #EB4533;
@@ -63,17 +64,19 @@ list-style-type: none;
 	background-color: #37393E;
 }
 .row {
-	width: 100%;
+	width: 98%;
 	background-color: #37393E;
-	height: 10%;
+	height: 12%;
 	margin-top: 5px;
 	padding-left: 7px;
+	overflow-x: hidden;
 	padding-top: 7px;
-	padding-right: 7px;
+	padding-right: 0px;
 	margin-left: 0;
+	padding-bottom: 7px;
 }
 .artwork {
-	height: 98%;
+	height: 80px;
 	width: auto;
 	float: left;
 	display: inline;
@@ -84,6 +87,7 @@ list-style-type: none;
 	color: #F2F2F2;
 	font-size: 21px;
 	width: auto;
+	max-width: 80%;
 	overflow: hidden;
 	padding-right: 7px;
   text-overflow: ellipsis;
@@ -93,8 +97,9 @@ list-style-type: none;
 	color: #F2F2F2;
 	font-size: 17px;
 	width: auto;
+	max-width: 80%;
 	margin-top: 2px;
-	overflow: auto;
+	overflow: hidden;
 	padding-right: 7px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -136,14 +141,14 @@ list-style-type: none;
 	display: inline;
 }
 .current {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  width: 98%;
 	background-color: #37393E;
-	height: 125px;
-	margin-top: 5px;
+	height: 115px;
 	padding-left: 7px;
+	padding-bottom: 7px;
+	padding-top: 5px;
 	margin-left: 0;
+	margin-top: 7px;
 }
 
 progress {appearance: none; -moz-appearance: none; -webkit-appearance: none; user-select: none;}
