--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -9,6 +9,10 @@ img, object, embed, video {
 * {
 	font-family: Avenir, Gotham, Helvetica, Arial, sans-serif
 }
+#song {
+
+}
+
 html,body {
 	background-color: #222326;
 	min-height: 100%;
