--- a/static/css/play.css
+++ b/static/css/play.css
@@ -12,7 +12,18 @@ img, object, embed, video {
 #song {
 
 }
-
+.error {
+	position: fixed;
+	height: auto;
+	background-color: #fc2558;
+	color: #f2f2f2;
+	font-size: 12.5px;
+	line-height: 35px;
+	width: 100%;
+	z-index: 1000;
+	text-align: center;
+	top: 0;
+}
 html,body {
 	background-color: #222326;
 	min-height: 100%;
